# quick-translate

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
changelog/: CHANGELOG_AUTO.md
docs/: UPDATER_SETUP.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: config.rs  history.rs  mod.rs  system.rs  translate.rs
src-tauri/src/domain/: config.rs  history.rs  mod.rs
src-tauri/src/domain/translator/: baidu.rs  deepl.rs  google.rs  mod.rs  tencent.rs  youdao.rs
src-tauri/src/infra/: crypto.rs  database.rs  http_client.rs  mod.rs
src-tauri/src/system/: clipboard.rs  clipboard_monitor.rs  hotkey.rs  mod.rs  translation_flow.rs  tray.rs  updater.rs
src/components/: CopyButton.tsx  Toast.tsx  ToastManager.tsx
src/hooks/: useTauriEvent.ts  useTheme.ts
src/lib/: commands.ts  constants.ts  types.ts
src/stores/: configStore.ts  historyStore.ts  translationStore.ts
src/styles/: globals.css
src/windows/history/: HistoryList.tsx  HistoryWindow.tsx  SearchBar.tsx
src/windows/onboarding/: OnboardingWindow.tsx
src/windows/popup/: ErrorBoundary.tsx  ErrorView.tsx  LoadingView.tsx  PopupWindow.tsx  ResultView.tsx
src/windows/settings/: SettingsWindow.tsx
