[package]
name = "quicktranslate"
version = "0.1.2"
edition = "2021"

[lib]
name = "quicktranslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

thiserror = "2"
async-trait = "0.1"

arboard = "3"

aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# 签名依赖（腾讯/有道 HMAC-SHA256，百度 MD5）
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
